backend-deploiement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: innov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: eddyrakotonirina/inoov-t:backend  # Remplace par ton image
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: innov
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort : 30002
  type: NodePort  # Modifie en LoadBalancer si besoin d'un accès externe
