frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: innov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: eddyrakotonirina/inoov-t:frontend
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: innov
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort : 30003
  type: NodePort
